# ChangeLog for gnustep-apps/systempreferences
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnustep-apps/systempreferences/ChangeLog,v 1.1 2006/09/03 20:14:35 grobian Exp $

*systempreferences-1.0.1 (03 Sep 2006)

  03 Sep 2006; Fabian Groffen <grobian@gentoo.org> +metadata.xml,
  +systempreferences-1.0.1.ebuild:
  Initial commit, based on the ebuild by Dmitry S. Kulyabov (bug #124366)
