@@ -1,0 +1,3 @@
+MD5 2fab01834d5eeecdf44fa1a1aad5200e systempreferences-1.0.1_p24791.tar.bz2 233630
+RMD160 cb3abb9c511b4a01782316a8bb70b25b38b0a083 systempreferences-1.0.1_p24791.tar.bz2 233630
+SHA256 24a4646161a0df963414c41808e2544b2bcd08b36e3878f26597347d80840217 systempreferences-1.0.1_p24791.tar.bz2 233630
