@@ -1,0 +1,13 @@
+# Copyright 1999-2007 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/gnustep-apps/systempreferences/systempreferences-1.0.1_p24791.ebuild,v 1.1 2007/09/10 16:12:17 voyageur Exp $
+
+inherit gnustep-2
+
+DESCRIPTION="System Preferences is a clone of Apple OS X' System Preferences"
+HOMEPAGE="http://www.gnustep.it/enrico/system-preferences/"
+SRC_URI="mirror://gentoo/${P}.tar.bz2"
+
+KEYWORDS="~ppc ~x86 ~amd64"
+LICENSE="GPL-2"
+SLOT="0"
