@@ -1,6 +1,12 @@
 # ChangeLog for gnustep-apps/systempreferences
-# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnustep-apps/systempreferences/ChangeLog,v 1.1 2006/09/03 20:14:35 grobian Exp $
+# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/gnustep-apps/systempreferences/ChangeLog,v 1.2 2007/09/10 16:12:17 voyageur Exp $
+
+*systempreferences-1.0.1_p24791 (10 Sep 2007)
+
+  10 Sep 2007; Bernard Cafarelli <voyageur@gentoo.org>
+  +systempreferences-1.0.1_p24791.ebuild:
+  Version bump from the GNUstep overlay
 
 *systempreferences-1.0.1 (03 Sep 2006)
 
